--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/temqua/vpn-bot#readme",
   "dependencies": {
+    "@prisma/client": "^4.11.0",
     "node-telegram-bot-api": "^0.61.0",
     "pg": "^8.9.0"
   },
@@ -26,6 +27,7 @@
     "@types/node": "^18.13.0",
     "@types/node-telegram-bot-api": "^0.57.6",
     "dotenv": "^16.0.3",
+    "prisma": "^4.11.0",
     "typescript": "^4.9.5"
   }
 }
