--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -14,8 +14,8 @@ services:
     environment:
       - POSTGRES_PORT=5433
     volumes:
-      - ./pg-init.sql:/docker-entrypoint-initdb.d/pg-init.sql:ro
       - vpndata:/var/lib/postgresql/data
+      - ./data.sql:/docker-entrypoint-initdb.d/pg-init.sql:ro
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -p 5433"]
       interval: 5s
