--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "prestart": "tsc && prisma migrate deploy && prisma generate",
     "start": "node dist/main.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -25,9 +25,13 @@
     "pg": "^8.9.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-typescript": "^7.21.4",
+    "@jest/globals": "^29.5.0",
     "@types/node": "^18.13.0",
     "@types/node-telegram-bot-api": "^0.57.6",
     "dotenv": "^16.0.3",
+    "jest": "^29.5.0",
     "prisma": "^4.11.0",
     "typescript": "^4.9.5"
   }
