Stole correct wireguard install file

--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -29,8 +29,12 @@ services:
     network_mode: host
     env_file:
       - .env
+    cap_add:
+      - NET_ADMIN
     environment:
-      NODE_ENV: development
+      - NODE_ENV=development
+      - PUID=1000
+      - PGID=1000
     depends_on:
       vpndb: 
         condition: service_healthy
@@ -47,24 +51,6 @@ services:
     volumes:
       - ikev2-vpn-data:/etc/ipsec.d
       - /lib/modules:/lib/modules:ro
-
-  wireguard:
-    build:
-      context: .
-      dockerfile: ./Dockerfile.wireguard
-    restart: unless-stopped
-    container_name: wireguard
-    cap_add:
-      - NET_ADMIN
-    environment:
-      - PUID=1000
-      - PGID=1000
-    volumes:
-      - wireguard-data:/etc/wireguard
-    ports:
-      - 51820:51820/udp
-    sysctls:
-      - net.ipv4.conf.all.src_valid_mark=1
 
 volumes:
   vpndata:
