--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   "homepage": "https://github.com/temqua/vpn-bot#readme",
   "dependencies": {
     "@prisma/client": "^4.11.0",
+    "dotenv": "^16.3.1",
     "node-telegram-bot-api": "^0.61.0",
-    "pg": "^8.9.0"
+    "pg": "^8.11.1",
+    "prisma": "^4.16.2"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.21.4",
@@ -32,9 +34,7 @@
     "@jest/globals": "^29.5.0",
     "@types/node": "^18.13.0",
     "@types/node-telegram-bot-api": "^0.57.6",
-    "dotenv": "^16.0.3",
     "jest": "^29.5.0",
-    "prisma": "^4.11.0",
     "typescript": "^4.9.5"
   }
 }
