--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "dist/main.js",
   "scripts": {
     "build": "tsc && npm run prisma:build",
+    "compile": "tsc",
+    "rabbit:start": "node dist/services/queue.js",
     "prisma:build": "prisma migrate deploy && prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prestart": "npm run build",
@@ -23,6 +25,7 @@
   "homepage": "https://github.com/temqua/vpn-bot#readme",
   "dependencies": {
     "@prisma/client": "^4.11.0",
+    "amqplib": "^0.10.3",
     "dotenv": "^16.3.1",
     "node-telegram-bot-api": "^0.61.0",
     "pg": "^8.11.1",
@@ -32,7 +35,8 @@
     "@babel/preset-env": "^7.21.4",
     "@babel/preset-typescript": "^7.21.4",
     "@jest/globals": "^29.5.0",
-    "@types/node": "^18.13.0",
+    "@types/amqplib": "^0.10.1",
+    "@types/node": "^18.16.19",
     "@types/node-telegram-bot-api": "^0.57.6",
     "jest": "^29.5.0",
     "typescript": "^4.9.5"
