--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "dist/main.js",
   "scripts": {
     "build": "tsc && npm run prisma:build",
-    "compile": "tsc",
-    "rabbit:start": "node dist/services/queue.js",
+    "receiver:start": "tsc && node dist/services/receiver.js",
     "prisma:build": "prisma migrate deploy && prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prestart": "npm run build",
@@ -39,6 +38,7 @@
     "@types/node": "^18.16.19",
     "@types/node-telegram-bot-api": "^0.57.6",
     "jest": "^29.5.0",
+    "prettier": "^3.0.0",
     "typescript": "^4.9.5"
   }
 }
