--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@prisma/client": "^5.0.0",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
+    "ms": "^2.1.3",
     "node-telegram-bot-api": "^0.61.0",
     "pg": "^8.11.1"
   },
@@ -34,6 +35,7 @@
     "@babel/preset-env": "^7.21.4",
     "@babel/preset-typescript": "^7.21.4",
     "@jest/globals": "^29.5.0",
+    "@types/ms": "^0.7.31",
     "@types/node": "^18.16.19",
     "@types/node-telegram-bot-api": "^0.57.6",
     "jest": "^29.5.0",
