:seedling::sparkles::arrow_up:Added relations for messages and settings. Introduced seeds. Updated dependencies. Get unpaid users command.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,8 +11,10 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
+            "envFile": "${workspaceFolder}/.env",
             "program": "${workspaceFolder}/src/main.ts",
             "preLaunchTask": "tsc: build - tsconfig.json",
+            "console": "integratedTerminal",
             "outFiles": [
                 "${workspaceFolder}/**/*.js"
             ]
