--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prisma:build": "prisma migrate deploy && prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prestart": "npm run build",
+    "seeds:up": "ts-node prisma/seeds.ts",
     "start": "node dist/main.js",
     "start:receiver": "node dist/services/receiver.js",
     "test": "jest"
@@ -24,23 +25,25 @@
   },
   "homepage": "https://github.com/temqua/vpn-bot#readme",
   "dependencies": {
-    "@prisma/client": "^5.0.0",
+    "@prisma/client": "^5.2.0",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "ms": "^2.1.3",
     "node-telegram-bot-api": "^0.61.0",
-    "pg": "^8.11.1"
+    "pg": "^8.11.3"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.21.4",
-    "@babel/preset-typescript": "^7.21.4",
+    "@babel/preset-env": "^7.22.15",
+    "@babel/preset-typescript": "^7.22.15",
     "@jest/globals": "^29.5.0",
     "@types/ms": "^0.7.31",
-    "@types/node": "^18.16.19",
-    "@types/node-telegram-bot-api": "^0.57.6",
-    "jest": "^29.5.0",
-    "prettier": "^3.0.0",
-    "prisma": "^5.0.0",
-    "typescript": "^4.9.5"
+    "@types/node": "^20.6.0",
+    "@types/node-telegram-bot-api": "^0.61.7",
+    "jest": "^29.6.4",
+    "prettier": "^3.0.3",
+    "prisma": "^5.2.0",
+    "ts-node": "^10.9.1",
+    "tsup": "^7.2.0",
+    "typescript": "^5.2.2"
   }
 }
