--- a/tsconfig.receiver.json
+++ b/tsconfig.receiver.json
@@ -1,14 +1,12 @@
 {
-  "compilerOptions": {
-    "module": "commonjs",
-    "esModuleInterop": true,
-    "target": "es6",
-    "moduleResolution": "node",
-    "sourceMap": true,
-    "rootDir": "src",
-    "outDir": "dist",
-    "allowJs": true,
-    "resolveJsonModule": true
-  },
-  "include": ["src/services/receiver.ts"],
+	"compilerOptions": {
+		"lib": ["ESNext"],
+		"target": "ESNext",
+		"module": "ESNext",
+		"esModuleInterop": true,
+		"moduleResolution": "bundler",
+		"sourceMap": true,
+		"allowJs": true,
+		"resolveJsonModule": true
+	}
 }
