--- a/package.json
+++ b/package.json
@@ -1,19 +1,11 @@
 {
   "name": "vpn-bot",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "Simple Telegram bot for Dagon VPN management",
   "main": "src/main.ts",
   "scripts": {
-    "build": "bun run prisma:build",
-    "prisma:build": "prisma migrate deploy && prisma generate && npx prisma db seed",
-    "prisma:migrate": "prisma migrate dev",
-    "prestart": "bun run build",
     "start": "bun src/main.ts",
-    "start:receiver": "bun src/services/receiver.ts",
     "format": "prettier --write ."
-  },
-  "prisma": {
-    "seed": "npx dotenv -e .env -- ts-node -P tsconfig.seeds.json prisma/seeds.ts"
   },
   "repository": {
     "type": "git",
@@ -26,20 +18,16 @@
   },
   "homepage": "https://github.com/temqua/vpn-bot#readme",
   "dependencies": {
-    "@prisma/client": "^5.9.1",
     "date-fns": "3.3.1",
     "dotenv": "^16.4.1",
     "ms": "^2.1.3",
-    "node-telegram-bot-api": "^0.64.0",
-    "pg": "^8.11.3"
+    "node-telegram-bot-api": "^0.64.0"
   },
   "devDependencies": {
     "@types/ms": "^0.7.34",
     "@types/node-telegram-bot-api": "^0.64.2",
     "dotenv-cli": "^7.3.0",
-    "prettier": "^3.2.5",
-    "prisma": "^5.9.1",
-    "ts-node": "^10.9.2"
+    "prettier": "^3.2.5"
   },
   "peerDependencies": {
     "typescript": "^5.3.3"
