--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,8 +11,7 @@
 			"program": "${workspaceFolder}/src/main.ts",
 			"env": {
 				"BOT_TOKEN": "6360232926:AAEJUs4Zh-y9RgTPpilPV5T4f9OzAuV8Ql4",
-				"SERVICE_TOKEN": "17fFGT3wimqjZWk1zmC5nUAiBVC2GyP2",
-				"IKE_HOME": "ikeclients"
+				"SERVICE_TOKEN": "17fFGT3wimqjZWk1zmC5nUAiBVC2GyP2"
 			}
 		}
 	]
