--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "vpn-bot",
-	"version": "2.0.0-beta.01",
+	"version": "2.1.0",
 	"description": "Simple Telegram bot for Dagon VPN management",
 	"main": "src/main.ts",
 	"scripts": {
