Removed pm2 logs command and update with wireguard.sh in /usr/bin

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,4 +9,4 @@ services:
         volumes:
             - ./scripts:/app/scripts:rwx
             - /usr/bin/ikev2.sh:/usr/bin/ikev2.sh
-            - /root/wireguard.sh:/usr/bin/wireguard.sh
+            - /usr/bin/wireguard.sh:/usr/bin/wireguard.sh
