--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
             dockerfile: ./Dockerfile
         env_file: .env
         volumes:
-            - ./scripts:/app/scripts:rwx
+            - ./scripts:/app/scripts
             - /usr/bin/ikev2.sh:/usr/bin/ikev2.sh
             - /usr/bin/wireguard.sh:/usr/bin/wireguard.sh
+            - ./:/app/clients
