--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,9 @@ services:
             dockerfile: ./Dockerfile
         env_file: .env
         volumes:
+            - type: bind
+              source: /root
+              target: /app/host-fs
             - ./scripts:/app/scripts
             - /usr/bin/ikev2.sh:/usr/bin/ikev2.sh
             - /usr/bin/wireguard.sh:/usr/bin/wireguard.sh
-            - ./:/app/clients
