Added ipsec + wg to volumes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,6 @@ services:
             - ./scripts:/app/scripts
             - /usr/bin/ikev2.sh:/usr/bin/ikev2.sh
             - /usr/bin/wireguard.sh:/usr/bin/wireguard.sh
+            - /etc/ipsec.d:/etc/ipsec.d
+            - /lib/modules:/lib/modules:ro
+            - /etc/wireguard:/etc/wireguard
