Fixed deploy pipeline and remove script

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,5 +23,5 @@ jobs:
                   ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << 'EOF'
                     cd vpn-bot
                     git pull origin main
-                    ./deploy.sh
+                    docker-compose up --build -d
                   EOF
