added qrencode lib

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 services:
     app:
         image: vpn-bot
-        network_mode: host
         build:
             context: .
             dockerfile: ./Dockerfile
@@ -23,3 +22,5 @@ services:
             - /usr/local/libexec:/usr/local/libexec:ro
             - /usr/bin/wg:/usr/bin/wg
             - /usr/bin/qrencode:/usr/bin/qrencode:ro
+            - /usr/lib/x86_64-linux-gnu/libqrencode.so.4:/usr/lib/x86_64-linux-gnu/libqrencode.so.4:ro
+            - /usr/lib/x86_64-linux-gnu/libqrencode.so.4.1.1:/usr/lib/x86_64-linux-gnu/libqrencode.so.4.1.1:ro
