--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,5 +24,5 @@ services:
             - /usr/bin/qrencode:/usr/bin/qrencode:ro
             - /usr/lib/x86_64-linux-gnu/libqrencode.so.4:/usr/lib/x86_64-linux-gnu/libqrencode.so.4:ro
             - /usr/lib/x86_64-linux-gnu/libqrencode.so.4.1.1:/usr/lib/x86_64-linux-gnu/libqrencode.so.4.1.1:ro
-            - /usr/lib/x86_64-linux-gnu/libpng16.so:/usr/lib/x86_64-linux-gnu/libpng16.so:ro
+            - /usr/lib/x86_64-linux-gnu/libpng16.so.16:/usr/lib/x86_64-linux-gnu/libpng16.so.16:ro
             - /usr/lib/x86_64-linux-gnu/libpng16.so.16.39.0:/usr/lib/x86_64-linux-gnu/libpng16.so.16.39.0:ro
