--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
             context: .
             dockerfile: ./Dockerfile
         env_file: .env
+        cap_add:
+            - NET_ADMIN
         devices:
             - /dev/net/tun
         volumes:
