--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 		"date-fns": "3.3.1",
 		"dotenv": "^16.4.1",
 		"ms": "^2.1.3",
-		"node-telegram-bot-api": "^0.64.0"
+		"node-telegram-bot-api": "^0.64.0",
+		"prisma": "^6.1.0"
 	},
 	"devDependencies": {
 		"@types/ms": "^0.7.34",
