Added prisma schema

--- a/docker-compose.db.yml
+++ b/docker-compose.db.yml
@@ -1,16 +1,24 @@
 services:
-    vpndb:
-        image: postgres:14.7-alpine
-        container_name: vpndb
-        network_mode: host
+    vpn-db:
+        image: postgres:17.2-bookworm
+        container_name: vpn-db
+        ports:
+            - "54333:5432"
         restart: unless-stopped
         env_file:
             - .env
+        environment:
+            POSTGRES_USER: admin
+            POSTGRES_PASSWORD: JFJ4GSvryTwBW1
+            POSTGRES_DB: vpn
         volumes:
-            - vpndata:/var/lib/postgresql/data
+            - vpn-data:/var/lib/postgresql/data
             - ./data.sql:/docker-entrypoint-initdb.d/pg-init.sql:ro
         healthcheck:
             test: ['CMD-SHELL', 'pg_isready']
             interval: 5s
             timeout: 45s
             retries: 5
+
+volumes:
+    vpn-data:
