--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	},
 	"homepage": "https://github.com/temqua/vpn-bot#readme",
 	"dependencies": {
+		"@prisma/client": "6.1.0",
 		"date-fns": "3.3.1",
 		"dotenv": "^16.4.1",
 		"ms": "^2.1.3",
