--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
 	"name": "vpn-bot",
-	"version": "2.1.0",
+	"version": "2.2.0",
 	"description": "Simple Telegram bot for Dagon VPN management",
 	"main": "src/main.ts",
 	"scripts": {
 		"start": "bun src/main.ts",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"seed": "bunx prisma/seed.ts"
+	},
+	"prisma": {
+		"seed": "bun prisma/seed.ts"
 	},
 	"repository": {
 		"type": "git",
@@ -21,15 +25,15 @@
 		"@prisma/client": "^6.2.1",
 		"date-fns": "3.3.1",
 		"dotenv": "^16.4.1",
+		"envalid": "^8.0.0",
 		"ms": "^2.1.3",
-		"node-telegram-bot-api": "^0.66.0",
-		"prisma": "^6.2.1"
+		"node-telegram-bot-api": "^0.66.0"
 	},
 	"devDependencies": {
 		"@types/ms": "^0.7.34",
 		"@types/node-telegram-bot-api": "^0.64.7",
-		"dotenv-cli": "^7.3.0",
-		"prettier": "^3.2.5"
+		"prettier": "^3.2.5",
+		"prisma": "^6.2.1"
 	},
 	"peerDependencies": {
 		"typescript": "^5.3.3"
