Cleaned seed.ts

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"prestart": "bunx prisma generate",
 		"start": "bun src/main.ts",
 		"format": "prettier --write .",
-		"seed": "bunx prisma/seed.ts"
+		"seed": "bun prisma/seed.ts"
 	},
 	"prisma": {
 		"seed": "bun prisma/seed.ts"
