--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"prestart": "bunx prisma generate",
 		"start": "bun src/main.ts",
 		"format": "prettier --write .",
-		"seed": "bun prisma/seed.ts"
+		"seed": "bun prisma/seed.ts",
+		"migration": "prisma migrate dev"
 	},
 	"prisma": {
 		"seed": "bun prisma/seed.ts"
