--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"date-fns": "3.3.1",
 		"dotenv": "^16.4.1",
 		"envalid": "^8.0.0",
+		"googleapis": "^144.0.0",
 		"ms": "^2.1.3",
 		"node-telegram-bot-api": "^0.66.0"
 	},
