--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 	"homepage": "https://github.com/temqua/vpn-bot#readme",
 	"dependencies": {
 		"@prisma/client": "^6.3.0",
-		"date-fns": "3.3.1",
+		"date-fns": "^4.1.0",
 		"dotenv": "^16.4.1",
 		"envalid": "^8.0.0",
 		"googleapis": "^144.0.0",
