--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,11 +2,16 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
-			"type": "typescript",
-			"tsconfig": "tsconfig.json",
-			"problemMatcher": ["$tsc"],
-			"group": "build",
-			"label": "tsc: build - tsconfig.json"
+			"type": "npm",
+			"script": "prisma migrate dev",
+			"problemMatcher": [],
+			"label": "npm: migration",
+			"detail": "npm run prisma migrate dev - package.json",
+			"options": {
+				"env": {
+					"DATABASE_URL": "postgresql://admin:JFJ4GSvryTwBW1@localhost:54333/vpn?schema=public"
+				}
+			}
 		}
 	]
 }
