--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
 	"name": "vpn-bot",
-	"version": "2.5.0",
+	"version": "2.6.0",
 	"description": "Simple Telegram bot for Dagon VPN management",
 	"main": "src/main.ts",
 	"scripts": {
 		"prestart": "bunx prisma generate",
 		"start": "bun src/main.ts",
 		"format": "prettier --write .",
+		"lint": "eslint src/**",
 		"seed": "bun prisma/seed.ts",
 		"migration": "prisma migrate dev"
 	},
@@ -33,10 +34,14 @@
 		"node-telegram-bot-api": "^0.66.0"
 	},
 	"devDependencies": {
+		"@eslint/js": "^9.21.0",
 		"@types/ms": "^0.7.34",
 		"@types/node-telegram-bot-api": "^0.64.7",
+		"eslint": "^9.21.0",
+		"globals": "^16.0.0",
 		"prettier": "^3.2.5",
-		"prisma": "^6.4.0"
+		"prisma": "^6.4.0",
+		"typescript-eslint": "^8.25.0"
 	},
 	"peerDependencies": {
 		"typescript": "^5.3.3"
