Added container name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
     app:
         image: vpn-bot
+        container_name: vpn-bot
         build:
             context: .
             dockerfile: ./Dockerfile
