--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,8 @@ services:
             - /usr/lib/x86_64-linux-gnu/libqrencode.so.4.1.1:/usr/lib/x86_64-linux-gnu/libqrencode.so.4.1.1:ro
             - /usr/lib/x86_64-linux-gnu/libpng16.so.16:/usr/lib/x86_64-linux-gnu/libpng16.so.16:ro
             - /usr/lib/x86_64-linux-gnu/libpng16.so.16.39.0:/usr/lib/x86_64-linux-gnu/libpng16.so.16.39.0:ro
+            - /lib/x86_64-linux-gnu/libqrencode.so.4:/lib/x86_64-linux-gnu/libqrencode.so.4:ro
+            - /lib/x86_64-linux-gnu/libqrencode.so.4.1.1:/lib/x86_64-linux-gnu/libqrencode.so.4.1.1:ro
             # Новые volumes для OpenVPN
             - /etc/openvpn:/etc/openvpn
             - /etc/openvpn/server:/etc/openvpn/server
