typescript errors + user format + updated `Dockerfile`.

--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
 	"version": "2.12.0",
 	"description": "Simple Telegram bot for Tesseract VPN management",
 	"main": "src/main.ts",
+	"type": "module",
 	"scripts": {
-		"prestart": "bunx prisma generate",
+		"prestart": "npx prisma generate",
 		"start": "bun src/main.ts",
 		"format": "prettier --write .",
 		"lint": "eslint src/**",
