--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,7 @@ services:
             - /usr/lib/x86_64-linux-gnu/libpng16.so.16.39.0:/usr/lib/x86_64-linux-gnu/libpng16.so.16.39.0:ro
             - /lib/x86_64-linux-gnu/libqrencode.so.4:/lib/x86_64-linux-gnu/libqrencode.so.4:ro
             - /lib/x86_64-linux-gnu/libqrencode.so.4.1.1:/lib/x86_64-linux-gnu/libqrencode.so.4.1.1:ro
+            - /lib/x86_64-linux-gnu/libc.so.6:/lib/x86_64-linux-gnu/libc.so.6:ro
             # Новые volumes для OpenVPN
             - /etc/openvpn:/etc/openvpn
             - /etc/openvpn/server:/etc/openvpn/server
