--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,16 +5,22 @@
 	"version": "0.2.0",
 	"configurations": [
 		{
-			"type": "bun",
+			"name": "Launch Keys Bot",
+			"program": "${workspaceFolder}/apps/keys/dist/src/index.js",
 			"request": "launch",
-			"name": "Launch Bot Bun",
-			"program": "${workspaceFolder}/src/main.ts"
+			"skipFiles": ["<node_internals>/**"],
+			"runtimeExecutable": "nodemon",
+			"type": "node",
+			"envFile": "${workspaceFolder}/apps/keys/.env"
 		},
 		{
-			"type": "bun",
+			"name": "Launch Users Bot",
+			"program": "${workspaceFolder}/apps/users/dist/src/index.js",
 			"request": "launch",
-			"name": "Launch Backups Bot Bun",
-			"program": "${workspaceFolder}/src/backup.ts"
+			"skipFiles": ["<node_internals>/**"],
+			"runtimeExecutable": "nodemon",
+			"type": "node",
+			"envFile": "${workspaceFolder}/apps/users/.env"
 		}
 	]
 }
