--- a/apps/keys/package.json
+++ b/apps/keys/package.json
@@ -4,16 +4,10 @@
 	"module": "src/index.ts",
 	"type": "module",
 	"scripts": {
-		"build": "tsc",
-		"lint": "eslint src/**",
-		"format": "prettier --write ."
+		"build": "tsc"
 	},
 	"devDependencies": {
-		"@eslint/js": "^9.33.0",
-		"@types/node": "^24.3.0",
-		"eslint": "^9.33.0",
-		"prettier": "^3.6.2",
-		"typescript-eslint": "^8.39.1"
+		"@types/node": "^24.3.0"
 	},
 	"peerDependencies": {
 		"typescript": "^5.0.0"
