--- a/package.json
+++ b/package.json
@@ -1,19 +1,12 @@
 {
-	"name": "vpn-bot",
-	"version": "2.12.0",
-	"description": "Simple Telegram bot for Tesseract VPN management",
+	"name": "vpn-ecosystem",
+	"version": "3.0.0",
+	"description": "Bunch of Telegram bots for Tesseract VPN management",
 	"main": "src/main.ts",
 	"type": "module",
 	"scripts": {
-		"prestart": "npx prisma generate",
-		"start": "bun src/main.ts",
-		"format": "prettier --write .",
-		"lint": "eslint src/**",
-		"seed": "bun prisma/seed.ts",
-		"migration": "prisma migrate dev"
-	},
-	"prisma": {
-		"seed": "bun prisma/seed.ts"
+		"lint": "eslint apps/**",
+		"format": "prettier --write ."
 	},
 	"repository": {
 		"type": "git",
@@ -25,24 +18,15 @@
 		"url": "https://github.com/temqua/vpn-bot/issues"
 	},
 	"homepage": "https://github.com/temqua/vpn-bot#readme",
-	"dependencies": {
-		"@prisma/client": "^6.7.0",
-		"date-fns": "^4.1.0",
-		"dotenv": "^16.5.0",
-		"envalid": "^8.0.0",
-		"googleapis": "^148.0.0",
-		"ms": "^2.1.3",
-		"node-telegram-bot-api": "^0.66.0"
-	},
 	"devDependencies": {
-		"@eslint/js": "^9.26.0",
-		"@types/ms": "^0.7.34",
-		"@types/node-telegram-bot-api": "^0.64.8",
-		"eslint": "^9.26.0",
-		"globals": "^16.1.0",
+		"@eslint/js": "^9.33.0",
+		"@types/node": "^24.3.0",
+		"eslint": "^9.33.0",
+		"globals": "^16.3.0",
+		"nodemon": "^3.1.10",
 		"prettier": "^3.5.3",
-		"prisma": "^6.7.0",
-		"typescript-eslint": "^8.32.0"
+		"ts-node": "^10.9.2",
+		"typescript-eslint": "^8.39.1"
 	},
 	"peerDependencies": {
 		"typescript": "^5.3.3"
