--- a/apps/keys/tsconfig.json
+++ b/apps/keys/tsconfig.json
@@ -1,10 +1,13 @@
 {
 	"compilerOptions": {
 		"outDir": "dist",
-		"module": "esnext",
-		"target": "esnext",
-		"moduleResolution": "bundler",
-		"skipLibCheck": true
+		"module": "commonjs",
+		"target": "es2024",
+		"lib": ["ES2024"],
+		"moduleResolution": "node",
+		"skipLibCheck": true,
+		"resolveJsonModule": true,
+		"esModuleInterop": true
 	},
 	"include": ["src/**/*", "package.json"]
 }
