--- a/apps/backups/docker-compose.yml
+++ b/apps/backups/docker-compose.yml
@@ -23,10 +23,10 @@ services:
         container_name: backups-bot
         build:
             context: .
-            dockerfile: ./apps/backups/Dockerfile
+            dockerfile: ./Dockerfile
         env_file: .env
         network_mode: host
-        restart: always
+        restart: unless-stopped
         volumes:
             - backups:/home/vpnadmin/backups
 
