--- a/apps/keys/package.json
+++ b/apps/keys/package.json
@@ -1,13 +1,12 @@
 {
 	"name": "keys-bot",
 	"version": "3.0.0",
-	"module": "src/index.ts",
-	"type": "module",
 	"scripts": {
-		"build": "tsc"
+		"build": "rimraf dist && tsc"
 	},
 	"devDependencies": {
-		"@types/node": "^24.3.0"
+		"@types/node": "^24.3.0",
+		"rimraf": "^6.0.1"
 	},
 	"peerDependencies": {
 		"typescript": "^5.0.0"
