--- a/apps/users/Dockerfile
+++ b/apps/users/Dockerfile
@@ -1,8 +1,19 @@
-FROM node:lts-alpine
-WORKDIR /users-bot
+FROM node:lts-alpine as builder
+WORKDIR /app
 
-COPY package.json package-lock.json sheets-api.json .env tsconfig.json /users-bot/
+COPY package.json package-lock.json sheets-api.json .env tsconfig.json ./
 COPY src/ ./src
 COPY prisma/ ./prisma
-RUN npm install && npm run build && npm ci --omit=dev
-CMD [ "node", "dist/src/index.js" ]
+
+RUN npm ci && npm run build
+
+FROM node:lts-alpine
+WORKDIR /app
+
+COPY package.json package-lock.json sheets-api.json .env tsconfig.json ./
+COPY --from=builder /app/dist ./dist
+COPY prisma/ ./prisma
+RUN npm ci --omit=dev
+RUN npx prisma generate
+
+CMD ["node", "dist/src/index.js"]
