--- a/apps/backups/docker-compose.yml
+++ b/apps/backups/docker-compose.yml
@@ -13,11 +13,10 @@ services:
             POSTGRES_DB: vpn
         volumes:
             - vpn-bot_vpn-data:/var/lib/postgresql/data
-            - ./data.sql:/docker-entrypoint-initdb.d/pg-init.sql:ro
         healthcheck:
-            test: ['CMD-SHELL', 'pg_isready']
-            interval: 5s
-            timeout: 45s
+            test: ['CMD-SHELL', 'pg_isready -U admin -d vpn']
+            interval: 10s
+            timeout: 30s
             retries: 5
     backups-bot:
         image: backups-bot
