--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,21 +6,23 @@
 	"configurations": [
 		{
 			"name": "Launch Keys Bot",
-			"program": "${workspaceFolder}/apps/keys/dist/src/index.js",
+			"program": "${workspaceFolder}/apps/keys/src/index.ts",
 			"request": "launch",
 			"skipFiles": ["<node_internals>/**"],
 			"runtimeExecutable": "nodemon",
 			"type": "node",
-			"envFile": "${workspaceFolder}/apps/keys/.env"
+			"envFile": "${workspaceFolder}/apps/keys/.env",
+			"outFiles": ["${workspaceFolder}/apps/keys/dist/**/*.js"]
 		},
 		{
 			"name": "Launch Users Bot",
-			"program": "${workspaceFolder}/apps/users/dist/src/index.js",
+			"program": "${workspaceFolder}/apps/users/src/index.ts",
 			"request": "launch",
 			"skipFiles": ["<node_internals>/**"],
 			"runtimeExecutable": "nodemon",
 			"type": "node",
-			"envFile": "${workspaceFolder}/apps/users/.env"
+			"envFile": "${workspaceFolder}/apps/users/.env",
+			"outFiles": ["${workspaceFolder}/apps/users/dist/**/*.js"]
 		}
 	]
 }
