--- a/apps/keys/package.json
+++ b/apps/keys/package.json
@@ -5,7 +5,6 @@
 		"build": "rimraf dist && tsc"
 	},
 	"devDependencies": {
-		"@types/node": "^24.3.0",
 		"rimraf": "^6.0.1"
 	},
 	"peerDependencies": {
@@ -14,6 +13,7 @@
 	"dependencies": {
 		"dotenv": "^17.2.1",
 		"envalid": "^8.1.0",
-		"node-telegram-bot-api": "^0.66.0"
+		"node-telegram-bot-api": "^0.66.0",
+		"undici": "^6.21.3"
 	}
 }
