--- a/apps/keys/package.json
+++ b/apps/keys/package.json
@@ -5,6 +5,7 @@
 		"build": "rimraf dist && tsc"
 	},
 	"devDependencies": {
+		"@types/node": "^24.3.0",
 		"rimraf": "^6.0.1"
 	},
 	"peerDependencies": {
