--- a/apps/keys/package.json
+++ b/apps/keys/package.json
@@ -6,6 +6,7 @@
 	},
 	"devDependencies": {
 		"@types/node": "^24.3.0",
+		"@types/node-telegram-bot-api": "^0.64.10",
 		"rimraf": "^6.0.1"
 	},
 	"peerDependencies": {
