--- a/apps/users/package.json
+++ b/apps/users/package.json
@@ -20,6 +20,7 @@
 		"node-telegram-bot-api": "^0.66.0"
 	},
 	"devDependencies": {
+		"@types/ms": "^2.1.0",
 		"@types/node-telegram-bot-api": "^0.64.10",
 		"prisma": "^6.14.0",
 		"rimraf": "^6.0.1"
