--- a/apps/users/tsconfig.json
+++ b/apps/users/tsconfig.json
@@ -7,7 +7,10 @@
 		"moduleResolution": "node",
 		"skipLibCheck": true,
 		"resolveJsonModule": true,
-		"esModuleInterop": true
+		"esModuleInterop": true,
+		"incremental": true,
+		"sourceMap": true,
+		"inlineSources": true
 	},
 	"include": ["src/**/*", "package.json"]
 }
